--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@mapbox/togeojson": "^0.16.0",
     "cheerio": "^1.0.0-rc.9",
     "got": "^11.8.2",
+    "netlify-cli": "^8.14.1",
     "xmldom": "^0.6.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
