--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "^1.0.0-rc.9",
     "got": "^11.8.2",
     "netlify-cli": "^8.14.1",
+    "twitter-api-v2": "^1.11.0",
     "xmldom": "^0.6.0"
   },
   "scripts": {
